src/test/ui/never_type/impl_trait_fallback3.stderr
error: unconstrained opaque type
  --> $DIR/impl_trait_fallback3.rs:9:12
   |
LL | type Foo = impl T;
   |            ^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to previous error

